force-app/main/default/objects/Account/fields/CustomField1__c.field-meta.xml
<CustomField>
    <fullName>CustomField1__c</fullName>
    <label>CustomField1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>