force-app/main/default/objects/Account/fields/JulyField__c.field-meta.xml
<CustomField>
    <fullName>JulyField__c</fullName>
    <label>JulyField</label>
    <length>18</length>
    <type>Text</type>
</CustomField>