force-app/main/default/objects/Account/fields/PANField625__c.field-meta.xml
<CustomField>
    <fullName>PANField625__c</fullName>
    <label>PANField625</label>
    <length>18</length>
    <type>Text</type>
</CustomField>